--- a/index.html
+++ b/index.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 	<head>
-		<title>Page Title</title>
+		<title>David Spray - Computer Science</title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<meta property="og:url" content="dspray95.github.io">
+		<meta property="og.title" content="David Spray">
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="Computer Science student at York St John University. Software Developer. Designer">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
+		<script type="application/ld+json">
+		{
+			"@context": "http://schema.org",
+			"@type": "Person",
+			"name": "David Spray",
+			"jobTitle": "Computer Science Student",
+			"url": "dspray95.github.io",
+			"sameAs": [
+				"https://github.com/dspray95",
+				"https://www.linkedin.com/in/david-spray-aa3b23b0/",
+			],
+			"gender": "male",
+			"birthDate": "1995-07-04",
+		}
+		</script>
 	</head>
 	<body>
 		<div class="container--fluid">
 			<div class="container__row">
-				<div class="container__col-4">Col</div>
-				<div class="container__col-8">Col</div>
+				<div class="container__col-md-3 container__col-sm-12">
+					<div class="article__sidebar">
+						<div class="content__profile__img"></div>
+						<div class="content__profile__descr">
+							<h2>DAVID SPRAY</h2>
+							<p class="subtitle">Computer Science Student</p>
+							<p class="subsubtitle"><i>York St John University</i></p>
+						</div>
+						<div class="content__nav">
+							<ul>
+								<li><a href="#">ABOUT</a></li>
+								<li><a href="#">THINGS I CAN DO</a></li>
+								<li><a href="#">PORTFOLIO</a></li>
+								<li><a href="#">CONTACT</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="container__col-md-9 container__col-sm-12">
+					<div class="article__img">
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
