--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<h2>Computer Science student, part-time hill climber </h2>
 							<p>Hello! I'm David, currently in the final year of my computer science undergraduate course at York St John University.
 							Particular areas of interest for myself are software engineering, informatics, and any opportinity I can take to use my computing skills in a positive and meaningful way.
-							Outside of the realm of computers I'm a musician and avid hiker.<br></p>
+							Outside the realm of computers I'm a musician and avid hiker.<br></p>
 						</div>
 						<div class="main__body">
 							<div class="main__body__text">
@@ -101,48 +101,51 @@
 								<p>Some info regarding projects...</p>
 							</div>
 							<div class="container__row">
-								<div class="container__col-md-4 container__col-sm-4">
+								<div class="container__col-md-4 container__col-sm-12">
 									<div class="main__body__projects">
-										<img src='img/projects/qube1.png'></img>
+										<div class="img__qube">
+										</div>
 									</div>
 								</div>
-								<div class="container__col-md-8 container__col-sm-8">
+								<div class="container__col-md-8 container__col-sm-12">
 									<div class="main__body__projects__text">
 										<h3>Qubejump</h3>
-										<p>Some info about the sidescroller game here...</p>
+										<p>A retro 2D, procedurally generated sidescroller. Developed in Unity and C#. Additionally, an AI agent has been created to play the game.<br></p>
+										<a href="https://github.com/dspray95/ai-sidescroller">GitHub</a>
 									</div>
 								</div>
 							</div>
 							<div class="container__row">
-								<div class="container__col-md-4 container__col-sm-4">
+								<div class="container__col-md-4 container__col-sm-12">
 									<div class="main__body__projects">
-										<img src='#'></img>
+										<div class="img__kuhker"></div>
 									</div>
 								</div>
-								<div class="container__col-md-8 container__col-sm-8">
+								<div class="container__col-md-8 container__col-sm-12">
 									<div class="main__body__projects__text">
 										<h3>Kuhker</h3>
-										<p>Some info about the Kuhker here...</p>
+										<p>Health focused-mobile app, utilising machine learning to help users learn to cook.</p>
 									</div>
 								</div>
 							</div>
 							<div class="container__row">
-								<div class="container__col-md-4 container__col-sm-4">
+								<div class="container__col-md-4 container__col-sm-12">
 									<div class="main__body__projects">
-										<img src='img/projects/swarm.png'></img>
+										<div class="img__swarm"></div>
 									</div>
 								</div>
-								<div class="container__col-md-8 container__col-sm-8">
+								<div class="container__col-md-8 container__col-sm-12">
 									<div class="main__body__projects__text">
 										<h3>Swarm AI</h3>
-										<p>Some info about the Swarm AI here...</p>
+										<p>Modelling of a defensive behaviour of Apis Cerana Japonica, and exploration into the impacts of individual swarm member aggression<br></p>
+										<a href="https://github.com/dspray95/swarm-ai-bee-behaviour">GitHub</a>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="main__body">
 							<div class="main__body__text">
-								<h2>Contacts</h2>
+								<h2>Contact</h2>
 								<p>Contact info and such with an email form</p>
 							</div>
 						</div>
