--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<div class="main__body__projects__text">
 										<h3>Qubejump</h3>
 										<p>A retro 2D, procedurally generated sidescroller. Developed in Unity and C#. Additionally, an AI agent has been created to play the game.<br></p>
-										<a href="https://github.com/dspray95/ai-sidescroller">GitHub</a>
+										<a href="https://github.com/dspray95/ai-sidescroller">GitHub</a><br>
 									</div>
 								</div>
 							</div>
@@ -138,7 +138,7 @@
 									<div class="main__body__projects__text">
 										<h3>Swarm AI</h3>
 										<p>Modelling of a defensive behaviour of Apis Cerana Japonica, and exploration into the impacts of individual swarm member aggression<br></p>
-										<a href="https://github.com/dspray95/swarm-ai-bee-behaviour">GitHub</a>
+										<a href="https://github.com/dspray95/swarm-ai-bee-behaviour">GitHub</a><br>
 									</div>
 								</div>
 							</div>
@@ -146,7 +146,18 @@
 						<div class="main__body">
 							<div class="main__body__text">
 								<h2>Contact</h2>
-								<p>Contact info and such with an email form</p>
+								<p>If you want to contact me about anything feel free, use the form below or reach me at <a href="dspray95@gmail.com">dspray95@gmail.com</a></p>
+									<div id="form__wrapper">
+										 <form action="action_page.php">
+											<input type="text" id="email" name="email" placeholder="Email...">
+											<input type="text" id="subject" name="subject" placeholder="Subject...">
+											<textarea id="body" name="body" placeholder="Body..." style="height:200px"></textarea>
+
+											<input type="submit" value="Submit">
+
+										  </form>
+									  </div>
+								
 							</div>
 						</div>
 					</div>
