--- a/index.html
+++ b/index.html
@@ -148,16 +148,15 @@
 								<h2>Contact</h2>
 								<p>If you want to contact me about anything feel free, use the form below or reach me at <a href="dspray95@gmail.com">dspray95@gmail.com</a></p>
 									<div id="form__wrapper">
-										 <form action="action_page.php">
+										 <form action="contact.php">
 											<input type="text" id="email" name="email" placeholder="Email...">
 											<input type="text" id="subject" name="subject" placeholder="Subject...">
 											<textarea id="body" name="body" placeholder="Body..." style="height:200px"></textarea>
 
 											<input type="submit" value="Submit">
-
 										  </form>
 									  </div>
-								
+
 							</div>
 						</div>
 					</div>
