--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 								<h2>Contact</h2>
 								<p>If you want to contact me about anything feel free, use the form below or reach me at <a href="dspray95@gmail.com">dspray95@gmail.com</a></p>
 									<div id="form__wrapper">
-										 <form action="contact.php">
-											<input type="text" id="email" name="email" placeholder="Email...">
+										 <form action="http://formspree.io/dspray95@gmail.com">
+											<input type="email" id="email" name="email" placeholder="Email...">
 											<input type="text" id="subject" name="subject" placeholder="Subject...">
 											<textarea id="body" name="body" placeholder="Body..." style="height:200px"></textarea>
 
