--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								</ul>
 							</div>
 							<div class="sidebar__social">
-								<a href="https://www.linkedin.com/in/david-spray-aa3b23b0/"><img src="img\social\linkedin\In-White-75px-R.png" alt="LinkedIn"></img></a>
+								<a href="www.linkedin.com/in/davidspray95/"><img src="img\social\linkedin\In-White-75px-R.png" alt="LinkedIn"></img></a>
 								<a href="https://github.com/dspray95"><img src="img\social\github\GitHub-Mark-Light-64px.png" alt="GitHub"></img></a>
 							</div>
 					</div>
