--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="main__body" id="skills">
 							<div class="main__body__text">
 								<h2>Things I can do<br></h2>
-								<p>I have experiance working in several fields of computer science, including software design and engineering, web development, informatics, statistical modeling, and bioinformatics.<br></p>
+								<p>I have experience working in several fields of computer science, including software design and engineering, web development, informatics, statistical modeling, and bioinformatics.<br></p>
 								<br>
 							</div>
 							<div class="container__row">
